@@ -30,11 +30,11 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Helper class to build {@link ContactInfosType} instances.
  */
+@SuppressWarnings("checkstyle:ClassDataAbstractionCoupling")
 public final class ContactInfosTypeBuilder {
 
     private ContactInfosTypeBuilder() {
@@ -74,6 +74,7 @@ public final class ContactInfosTypeBuilder {
         return Optional.of(contactInfosType);
     }
 
+    @SuppressWarnings("checkstyle:NPathComplexity")
     private static Optional<AddressesType> extractAddressesType(Accommodation accommodation) {
         if (accommodation.getAccoDetailMap() == null || accommodation.getAccoDetailMap().isEmpty()) {
             return Optional.empty();
@@ -105,7 +106,7 @@ public final class ContactInfosTypeBuilder {
                     return isAddressEmpty(address) ? null : address;
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         // If there are no addresses, return an empty Optional
         if (addresses.isEmpty()) {
@@ -160,7 +161,8 @@ public final class ContactInfosTypeBuilder {
                     phone.setPhoneNumber(number);
                     phone.setPhoneTechType(phoneTechType);
                     return phone;
-                }).collect(Collectors.toList());
+                })
+                .toList();
     }
 
     private static Optional<EmailsType> extractEmailsType(Accommodation accommodation) {
@@ -179,7 +181,7 @@ public final class ContactInfosTypeBuilder {
                     result.setValue(email);
                     return result;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // If there are no emails, return an empty Optional
         if (emails.isEmpty()) {
@@ -206,7 +208,7 @@ public final class ContactInfosTypeBuilder {
                         result.setValue(website);
                         return result;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
             urLsType.getURLS().addAll(urls);
         }
